--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,13 +9,24 @@ h1, h2, h3, h4, h5 {
 
 path {
     fill: white !important;
-    
+    pointer-events: none;   
 }
+
+path.has-users {
+    cursor: pointer;
+    fill: #39CCCC !important;
+    pointer-events: all;   
+}
+
 path:hover {
-    fill: #eeeeee !important;
+    fill: #7FDBFF !important;
+    opacity: 0.6;
 }
+
 path.active {
-    fill: red !important;
+    cursor: pointer;
+    fill: #0074D9 !important;
+    opacity: 1;
 }
 
 .sections {
@@ -25,6 +36,9 @@ path.active {
 .map-wrp {
     border: 3px solid black;
     height: 100%;
+    min-width: 600px;
+    width: 600px;
+    overflow: hidden;
 }
  
 .map-wrp svg {
